@@ -1,3 +1,9 @@
+2001-12-07 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* digital hatswitch code can be turned off/on with
+	  debug_digital_hatswitch in section joystick
+
+
 2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* interpreter:
